# master-math

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  package-lock.json  package.json
.github/workflows/: publish.yml
core/: CMakeLists.txt  MasterMath.h  config.h.in  main.cpp  pch.h
core/include/: Answer.h  Application.h  EventHandlers.h  Exercise.h  Expression.h  ExpressionGenerator.h  MasterMath.h  Operand.h  User.h  Utf8.h
core/src/: Answer.cpp  Application.cpp  DeleteExerciseHandler.cpp  Exercise.cpp  Expression.cpp  ExpressionGenerator.cpp  GenerateExpressionsHandler.cpp  GetAppInfoHandler.cpp  LoadExercisesHandler.cpp  MasterMath.cpp  Operand.cpp  SaveExerciseHandler.cpp  SolveExpressionsHandler.cpp  User.cpp  Utf8.cpp
core/tests/: CMakeLists.txt  EventHandlersTest.cpp  ExerciseTest.cpp  ExpressionGeneratorTest.cpp  ExpressionTest.cpp  SimpleExpressionTests.cpp  UsersTest.cpp  main.cpp
frontend/: App.tsx  index.html  main.tsx  package-lock.json  package.json
frontend/components/: CountdownTimer.tsx  ExcerciseSetupDialog.tsx  ExerciseContainer.tsx  ExerciseImporter.tsx  ExercisesList.tsx  ExpressionInputControl.tsx  NumericInputControl.tsx  OperationMultiSelect.tsx  OperationSelector.tsx  ProblemInputControl.tsx  ServiceBtn.tsx  SubmitIssueBtn.tsx  Watermark.tsx  index.ts
frontend/controllers/: core.controller.ts  index.ts
frontend/models/: AppInfo.model.ts  exercise.model.ts  expressions.model.ts  index.ts
frontend/pages/: Exercise.tsx  ExerciseBuilder.tsx  ExerciseSetup.tsx  Main.tsx  Results.tsx
frontend/services/: core.service.ts  core.types.ts  index.ts
frontend/util/: time.util.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: generate_expressions.rs  lib.rs  main.rs
src-tauri/src/models/: exercise_config.rs  mod.rs
src/components/: CountdownTimer.tsx  ExpressionInputControl.tsx  NumericInputControl.tsx  OperatorsSelector.tsx  SimpleExpressions.tsx  index.ts
src/models/: ExerciseConfig.ts  Expression.ts
src/pages/: Exercise.tsx  ExerciseSetup.tsx  Main.tsx  Results.tsx  index.ts
webui/: CMakeLists.txt  main.cpp  pch.h
webui/frontend/: App.tsx  index.html  package-lock.json
webui/frontend/components/: CountdownTimer.tsx  ExpressionInputControl.tsx  NumericInputControl.tsx  OperationMultiSelect.tsx  OperationSelector.tsx  OperatorsSelector.tsx  index.ts
webui/frontend/models/: ExerciseConfig.ts  Expression.ts  Response.ts  index.ts
webui/frontend/pages/: Exercise.tsx  ExerciseBuilder.tsx  ExerciseSetup.tsx  Main.tsx  Results.tsx  index.ts
webui/frontend/util/: formatTime.ts
webui/include/: EventHandlers.h  GenerateExpressionsHandler.h  StartHandler.h
webui/src/: GenerateExpressionsHandler.cpp  SolveExpressionsHandler.cpp  StartHandler.cpp
windows/: resource.rc
